<resources>
    <string name="app_name">Ahoy</string>
    <string name="action_settings">Settings</string>
    <!-- Button text -->
    <string name="btn_logout_from_google">Logout from Google</string>
    <string name="btn_revoke_access">Revoke Access</string>


    <string name="closeDrawer">Navigation View</string>
    <string name="openDrawer">Navigation View Closed</string>
    <string name="title_activity_signup">SignupActivity</string>
    <string name="title_activity_phone_number">PhoneNumberActivity</string>
    <string name="mobilehint">Enter 10 Digit Mobile Number</string>
    <string name="sansseriflightfamily">sans-serif-light</string>
    <string name="verifytext">Verify</string>
    <string name="google_app_id">705253398104</string>
    <!--Nav Drawer Menu Items -->
    <string-array name="nav_drawer_labels">
        <item>Your Rides</item>
        <item>Search Ride</item>
        <item>Offer Ride</item>
        <item>Emergency Contacts</item>
        <item>Emergency Button</item>
        <item>Profile</item>
        <item>Log Out</item>
    </string-array>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_offer_ride">OfferRide</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_emergency_contact">EmergencyContact</string>
    <string name="title_activity_emergency_contact_main">Emergency_contact_main</string>
    <string name="title_activity_emergency_button">emergency_button</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="your_rides">Your Rides</string>
    <string name="search_ride">Search Ride</string>
    <string name="offer_ride">Offer Ride</string>
    <string name="profile">Profile</string>
    <string name="emergency_contact">Emergency Contact</string>
    <string name="emergency_button">Emergency Button</string>
    <string name="log_out">Log Out</string>

</resources>
